2011-01-19 Matthias Scholz <ms@jammerhund.de>
	* AdvancedMeasureOptionsPanel
		* Bugfix: if you have the cancel button pressed in the FontChooser, then
			an exception was thrown, because of a null-Font
	* MeasurementStyle
		* format pattern for area/length is now adaptive; thaks to Michaël for his idea
	* AdvancedMeasureOptionsPanel, MeasurementStyle, MeasureLayerFinder
		* now you can select individually if summary length and/or area should
			be painted; thanks to Jukka Rahkonen for his idea
	* AdvancedMeasureTool
		* now you can pan and zoom during measurment
	* CoordinateListMetrics
		* now you can get the distance for a closed geometry
		* this was the reason for different distance in the statusbar and while
			area measurement mode in the AdvancedMeasureTool

2011-01-16 Matthias Scholz <ms@jammerhund.de>
	* MeasureLayerFinder.featuresChanged()
		* Bugfix: the LayerListener now only works if the change was on
			the measureLayer; all changes on other layers will be ignored

2011-01-16 Matthias Scholz <ms@jammerhund.de>
	* AdvancedMeasurePlugin
		* styling for the AdvancedMeasureTool in the Option dialog added
		* I18N for english and german

2011-01-03 Matthias Scholz <ms@jammerhund.de>
	* com.vividsolutions.jump.workbench.ui.FontChooser
		* sample text i18n -> ui.FontChooser.sampletext
		* possibilty to set the font size in the dialog introduced
			* The GUI code was already present in jbinit(), but the components
			  was not finaly added to the dialog.
			* Added a new showDialog() and constructor with a flag for showing
			  the fontsize components or not.

2011-01-03 Matthias Scholz <ms@jammerhund.de>
	* Added a new AdvancedMeasurePlugin in org.openjump.core.ui.plugin.tools
		- added AdvancedMeasureTool, MeasureLayerFinder, MeasurementStyle
		- can be activated in default-plugins.xml:
			"<plug-in>org.openjump.core.ui.plugin.tools.AdvancedMeasurePlugin</plug-in>"

2010-12-27 Matthias Scholz <ms@jammerhund.de>