@@ -839,7 +839,8 @@ org.openjump.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn.sDes
 org.openjump.core.ui.plugin.tools.AdvancedMeasurePlugin.OptionPanelTitle = Messung
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.font = Schrift\:
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.choose-font = Schrift ausw\u00E4hlen
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary = L\u00E4nge und Fl\u00E4che anzeigen?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary-length = L\u00E4nge anzeigen?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary-area = Fl\u00E4che anzeigen?
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.fontcolor = Schriftfarbe\:
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.choose-color = Farbe ausw\u00E4hlen
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.vertex = Knoten
