@@ -771,33 +771,6 @@ org.openjump.core.ui.plugin.style.ImportSLDPlugIn.Basic-Styles = Styles de base
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.Select-Another-Style = Voulez-vous ajouter un autre style?
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.Question = Question
 org.openjump.core.ui.plugin.style.ImportSLDPlugIn.No-Styles-Found = Aucun style n'a \u00E9t\u00E9 trouv\u00E9 dans le fichier SLD.
-
-org.openjump.core.ui.plugin.tools.AdvancedMeasurePlugin.OptionPanelTitle = Outil de mesure
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.font = Police\:
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.choose-font = Choix de la police
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary = Afficher la longueur et la surface ?
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.fontcolor = Couleur\:
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.choose-color = Choix de la couleur
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.vertex = Point
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-vertex-distance = Afficher la distance entre les points ?
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.vertexstyle = Style des points\:
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.first-vertex = Premier point
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.following-vertexes = Points suivants
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.change-style = Changer le style
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-vertex = Afficher les points?
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.line-and-fill = Contours et int\u00E9rieur
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-line = Afficher la ligne ?
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.linecolor = Couleur de la ligne\:
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.filling = Remplir l'int\u00E9rieur ?
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.fillcolor = Couleur du fond\:
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.summary = Longueur et surface totales
-org.openjump.core.ui.plugin.tools.AdvancedMeasureTool.distance-measuring = Mesure de distance
-org.openjump.core.ui.plugin.tools.AdvancedMeasureTool.area-measuring = Mesure de surface
-org.openjump.core.ui.plugin.tools.AdvancedMeasureTool.options = Options
-org.openjump.core.ui.plugin.tools.MeasurementStyle.distance = Distance\:
-org.openjump.core.ui.plugin.tools.MeasurementStyle.area = Surface\:
-
-
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = Fusionner les lignes
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.New = Nouveau
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.The-blend-tolerance = Tol\u00E9rance de fusion.
@@ -863,6 +836,31 @@ org.openjump.plugin.tools.IntersectPolygonLayersPlugIn.Found-more-than-one-sourc
 org.openjump.plugin.tools.IntersectPolygonLayersPlugIn.Transfer-attributes = Transferer les attributs
 org.openjump.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn.Intersect-Polygons = Intersecter les polygones entre eux
 org.openjump.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn.sDescription = Intersecte tous les polygones d'une couche. Les polygones r\u00E9sultant qui correspondent \u00E0 plusieurs polygones initiaux perdent leurs attributs. Note\: Voir aussi la commande graphe planaire qui propose une fonction similaire.
+org.openjump.core.ui.plugin.tools.AdvancedMeasurePlugin.OptionPanelTitle = Outil de mesure
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.font = Police\:
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.choose-font = Choix de la police
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary-length = Afficher la longueur ?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary-area = Afficher la surface ?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.fontcolor = Couleur\:
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.choose-color = Choix de la couleur
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.vertex = Point
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-vertex-distance = Afficher la distance entre les points ?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.vertexstyle = Style des points\:
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.first-vertex = Premier point
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.following-vertexes = Points suivants
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.change-style = Changer le style
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-vertex = Afficher les points?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.line-and-fill = Contours et int\u00E9rieur
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-line = Afficher la ligne ?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.linecolor = Couleur de la ligne\:
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.filling = Remplir l'int\u00E9rieur ?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.fillcolor = Couleur du fond\:
+org.openjump.core.ui.plugin.tools.AdvancedMeasureTool.distance-measuring = Mesure de distance
+org.openjump.core.ui.plugin.tools.AdvancedMeasureTool.area-measuring = Mesure de surface
+org.openjump.core.ui.plugin.tools.AdvancedMeasureTool.options = Options
+org.openjump.core.ui.plugin.tools.MeasurementStyle.distance = Distance\:
+org.openjump.core.ui.plugin.tools.MeasurementStyle.area = Surface\:
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.summary = Longueur et surface totales
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.buffer-radius = Taille de la zone tampon
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.count = Nombre
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.Join-Attributes-Spatially = Jointure spatiale avec agr\u00E9gation d'attribut...
@@ -977,12 +975,10 @@ org.openjump.core.ui.plugin.wms.ZoomToWMSPlugIn.no-bounding-box = Aucun rectangl
 org.openjump.core.ui.plugin.wms.ZoomToWMSPlugIn.no-bounding-boxes-available = Aucun rectangle englobant disponible\!
 org.openjump.core.ui.plugin.wms.ZoomToWMSPlugIn.no-wms-layer-selected = Aucune couche WMS s\u00E9lectionn\u00E9e\!
 org.openjump.core.ui.plugin.wms.ZoomToWMSPlugIn.zoom-to-wms-layer = Zoomer sur la couche WMS
-
 org.openjump.core.ui.swing.VertexStylePanel.vertex-color = Couleur des points\:
 org.openjump.core.ui.swing.VertexStylePanel.vertex-style = Style des points\:
 org.openjump.core.ui.swing.VertexStylePanel.vertexsize = Taille des points\:
 org.openjump.core.ui.swing.VertexStylePanel.RestoreDefaultsSettings = Revenir \u00E0 l'apparence par d\u00E9faut
-
 org.openjump.core.ui.style.decoration.SegmentDownhillArrowStyle.Open = Fl\u00E8che descendante ouverte
 org.openjump.core.ui.style.decoration.SegmentDownhillArrowStyle.Solid = Fl\u00E8che descendante pleine
 org.openjump.core.ui.style.decoration.SegmentDownhillArrowStyle.SolidNarrow = Fl\u00E8che descendante \u00E9troite
